--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The server side for the app WWYLTE This is where we will build the server for this application with Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/what-would-you-like-to-eat/What-Would-You-Like-To-Eat-server#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
