--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "sequelize": "^6.26.0",
+    "sqlite3": "^5.1.2",
+    "yelp-fusion": "^2.0.2"
   }
 }
